--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1392,7 +1392,7 @@ table {
   }
 
   .profile-text>div {
-    text-align: left !important;
+    text-align: center !important;
     width: 100%;
   }
 
