--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,6 @@
 layout: default
 # The posts' layout
 # v2.0
-# https://github.com/cotes2020/jekyll-theme-chirpy
-# © 2017-2019 Cotes Chung
-# MIT Licensed
 ---
 
 <div class="row">
@@ -128,8 +125,8 @@ layout: default
 
     <div class="pl-1 pr-1 pl-sm-2 pr-sm-2 pl-md-4 pr-md-4">
 
-      {% include post-nav.html %}
-      
+      <!-- {% include post-nav.html %} -->
+
       {% include related-posts.html %}
 
       {% if site.disqus.comments and page.comments %}
