--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,14 +7,15 @@ layout: page
 <div id="post-list">
   {% for post in paginator.posts %}
   <div class="post-preview">
-    <h1>
-      <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-    </h1>
+    <div class="post-image">
+      <!-- <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> -->
+      <a href="{{ site.baseurl }}{{ post.url }}"><img border="0" alt="Data Science" src="{{ post.cover }}" width="220px" height="140px">
+      <div class="post-title"><h1>{{ post.title }}</h1></div></a>
+    </div>
     <div class="post-content">
       <p>
-      {{ post.content | strip_html | truncate: 200 | replace: '&', '&amp;' }}
+      {{ post.content | strip_html | truncate: 320 | replace: '&', '&amp;' }}
       </p>
-    </div>
 
     <div class="post-meta text-muted">
       <!-- posted date -->
@@ -31,6 +32,7 @@ layout: page
         <i class="fas fa-spinner fa-spin fa-fw"></i>
       </span>
       {% endif %}
+    </div>
     </div>
   </div> <!-- .post-review -->
   {% endfor %}
