--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -139,7 +139,12 @@
     margin-left: 0;
     margin-right: 0;
     width: 100%;
-    height: 240px;
+    height: 100%;
+  }
+
+  .post-title {
+    margin-left: 1.2rem;
+    bottom: 0.4rem;
   }
 }
 
