--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -3,9 +3,6 @@
 /*!
   Style for Homepage
   v2.0
-  https://github.com/cotes2020/jekyll-theme-chirpy
-  © 2019 Cotes Chung
-  MIT License
 */
 
 
@@ -121,7 +118,7 @@
   bottom: 0.2rem;
   text-align: left;
   >h1 {
-    font-weight: bold;
+    font-weight: 500;
   }
 }
 
@@ -143,8 +140,11 @@
   }
 
   .post-title {
-    margin-left: 1.2rem;
-    bottom: 0.4rem;
+    margin-left: 1.8rem;
+    bottom: 1.2rem;
+    >h1 {
+      font-weight: bold;
+    }
   }
 }
 
