Initial Release 3 - Adding image to blog preview page - Home Page

--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -69,7 +69,7 @@
 
   /* Home */
 
-  --post-list-text-color: dimgray;
+  --post-list-text-color: #495057;
 
   --btn-patinator-text-color: #555555;
 
