--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,24 @@
-<!--
-  The Footer
-  v2.0
 -->
 
 <footer class="d-flex w-100 justify-content-center">
-    <div class="d-flex justify-content-between align-items-center">
-        <div class="footer-left">
-            <p class="mb-0">
-                © {{ 'now' | date: "%Y" }}
-                <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>. {% if site.data.rights.brief %}
-                <span data-toggle="tooltip" data-placement="top" title="{{ site.data.rights.verbose }}">{{ site.data.rights.brief }}</span> {% endif %}
-            </p>
-        </div>
-
-        <div class="footer-right">
-            <p class="mb-0">
-                Powered by
-                <a href="https://jekyllrb.com" target="_blank">Jekyll</a>.
-            </p>
-        </div>
-
+  <div class="d-flex justify-content-between align-items-center">
+    <div class="footer-left">
+      <p class="mb-0">
+        © {{ 'now' | date: "%Y" }}
+        <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>.
+        {% if site.data.rights.brief %}
+        <span data-toggle="tooltip" data-placement="top"
+          title="{{ site.data.rights.verbose }}">{{ site.data.rights.brief }}</span>
+        {% endif %}
+      </p>
     </div>
-    <!-- div.d-flex -->
+
+    <div class="footer-right">
+      <p class="mb-0">
+        Powered by
+        <a href="https://jekyllrb.com" target="_blank">Jekyll</a>.
+      </p>
+    </div>
+
+  </div> <!-- div.d-flex -->
 </footer>
