--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,7 +63,7 @@ layout: default
       <div class="post-content">
 
         {% if page.image %}
-          <img src="{{ page.image }}">
+          <img src="{{ page.image }}" class="post-cover-image">
         {% endif %}
 
         {{ content }}
