--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -44,10 +44,20 @@
 
   /* Sidebar */
 
-  --site-title-color: #b6b6b6;
+  // --sidebar-bg: radial-gradient(
+  //   circle, rgba(42, 30, 107, 1) 0%, rgba(35, 37, 46, 1) 100%);
+
+  // --sidebar-bg: radial-gradient(
+  //   circle, rgba(144,26,26,1) 0%, rgba(20,18,18,1) 100%);
+
+  // --sidebar-bg: radial-gradient(
+  //   circle, rgba(13,99,110,1) 0%, rgba(20,18,18,1) 100%);
+
+  // --sidebar-bg: radial-gradient(
+  //   circle, rgba(156,12,59,1) 0%, rgba(20,18,18,1) 100%);
 
   --sidebar-bg: radial-gradient(
-    circle, rgba(42, 30, 107, 1) 0%, rgba(35, 37, 46, 1) 100%);
+    circle, rgba(5,66,124,1) 0%, rgba(20,18,18,1) 100%);
 
   --nav-cursor-color: #fcfcfc;
 
@@ -56,8 +66,6 @@
   --topbar-wrapper-bg: white;
 
   --topbar-text-color: rgb(78, 78, 78);
-
-  --search-wrapper-bg: #fff;
 
   --search-wrapper-bg: #f5f5f5;
 
