--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -1,10 +1,12 @@
 ---
+# Style for Homepage
+# v2.0
+# https://github.com/cotes2020/jekyll-theme-chirpy
+# © 2019 Cotes Chung
+# MIT License
 ---
-/*!
-  Style for Homepage
-  v2.0
-*/
 
+{% include_relative _addon/main.scss %}
 
 #post-list {
   margin-top: 1rem;
@@ -131,6 +133,7 @@
   }
   .post-preview {
     flex-direction: column;
+    padding-bottom: 0.4rem;
     .post-content {
       margin-left: 0.2rem;
     }
