--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,6 +1,9 @@
 <!--
   The GA snippet
   v2.0
+  https://github.com/cotes2020/jekyll-theme-chirpy
+  © 2017-2019 Cotes Chung
+  MIT License
 -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
