--- a/_includes/mode-toggle.html
+++ b/_includes/mode-toggle.html
@@ -2,6 +2,9 @@
   Switch the mode between dark and light.
 
   v2.1
+  https://github.com/cotes2020/jekyll-theme-chirpy
+  © 2020 Cotes Chung
+  MIT License
 -->
 
 <i class="mode-toggle fas fa-sun" dark-mode-invisible></i>
