--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -2,6 +2,9 @@
  The related posts of current post.
  Placed in the bottom of every single post.
  v2.0
+ https://github.com/cotes2020/jekyll-theme-chirpy
+ © 2019 Cotes Chung
+ Published under the MIT License
 -->
 
 {% assign MAX_SIZE = 3 %}
