--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,6 +2,8 @@
 layout: page
 # The Category layout
 # v2.0
+# https://github.com/cotes2020/jekyll-theme-chirpy
+# MIT Licensed
 ---
 
 <div id="page-category">
