--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,9 @@
 layout: default
 # The page layout
 # v2.0
+# https://github.com/cotes2020/jekyll-theme-chirpy
+# © 2017-2019 Cotes Chung
+# MIT License
 ---
 
 <div class="row">
