Updates to theme

--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -38,6 +38,9 @@
     {% endif %}
     </div>
 
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <div class="addthis_inline_share_toolbox"></div>
+
     <i id="search-trigger" class="fas fa-search fa-fw"></i>
     <span id="search-wrapper" class="align-items-center">
       <i class="fas fa-search fa-fw"></i>
