--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,9 @@ layout: compress
 
     {% include search-loader.html %}
 
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> 
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e908e7d111adc12"></script>
+
   </body>
 
 </html>
