--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -136,6 +136,9 @@
     padding-bottom: 0.4rem;
     .post-content {
       margin-left: 0.2rem;
+      >p {
+        -webkit-line-clamp: 4;
+      }
     }
   }
   .post-image >a>img {
