Updates to theme

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
     <div class="footer-right">
       <p class="mb-0">
         Powered by
-        <a href="https://jekyllrb.com" target="_blank">Jekyll</a>.
+        <a href="https://jekyllrb.com" target="_blank">Jekyll</a>
       </p>
     </div>
 
