--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -924,6 +924,8 @@ table {
 
 .addthis_inline_share_toolbox {
   margin-top: 0.4rem;
+  margin-left: auto;
+  margin-right: 1.2rem;
 }
 
 /*--- Responsive Design ---*/
