--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -64,11 +64,14 @@
   <span class="icon-border"></span>
   {% endif %}
 
-  <a href="https://github.com/{{ site.github.username }}" target="_blank">
+  <!-- <a href="https://github.com/{{ site.github.username }}" target="_blank">
     <i class="fab fa-github-alt"></i>
-  </a>
+  </a> -->
   <a href="https://twitter.com/{{ site.twitter.username }}" target="_blank">
     <i class="fab fa-twitter"></i>
+  </a>
+  <a href="https://facebook.com/{{ site.facebook.username }}" target="_blank">
+    <i class="fab fa-facebook"></i>
   </a>
   {% assign email = site.social.email | split: '@' %}
   <a href="javascript:window.open('mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@'))">
