--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -99,18 +99,21 @@
 
 } // .page-item
 
-
-.post-preview>.post-image>a>img {
-  border-radius: 4px;
-}
-
 .post-image {
   position: relative;
   display: inline;
+  overflow: hidden;
+  min-width: min-content;
+  border-radius: 6px;
 }
 
 .post-image >a>img {
   filter: brightness(60%);
+  transition: transform .5s ease;
+}
+
+.post-image:hover >a>img {
+  transform: scale(1.2);
 }
 
 .post-title {
